feat: add support for time zone providers in Messages class